Replace faulty image to remove weird tint, remove navbar button margin to fix overlapping issue, reduce title description font size

--- a/static/assets/css/stylesheet.css
+++ b/static/assets/css/stylesheet.css
@@ -464,6 +464,10 @@ Full-Width Styles
   text-align: left;
 }
 
+.md-headline.oppia-foundation-headline {
+  line-height: 30pt;
+}
+
 .md-button.oppia-foundation-gold-border-button {
   border: 3px outset goldenrod;
   min-width: 200px;
